--- a/Library-View/app/styles/krieghb/backup.css
+++ b/Library-View/app/styles/krieghb/backup.css
@@ -1,4 +1,15 @@
 /*div [id="addBook"] {*/
-    /*background-color: #001f3f;*/
-    /*color: white;*/
-/*}*/
+     /*background-color: #001f3f;*/
+     /*color: white;*/
+ /*}*/
+
+
+/*
+#newDIV {
+    position: fixed;
+    float: right;
+    padding-left: 80%;
+    padding-top: 0px;
+}
+*/
+
